# blackstory

./: .env.example  .firebaserc  .gitignore  .gitleaks.toml  .prettierignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  apphosting.admin.yaml  apphosting.staging.yaml  apphosting.yaml  construct.config.json  eslint.config.mjs  firebase.discovery.json  gitleaks.toml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.beads/: issues.jsonl  metadata.json
.cx/: context.json  context.md  (+1 more)
workers/publication/: MAP_SOURCE_INTEGRATION.md  pyproject.toml
workers/publication/src/black_book_publication/: __init__.py  release.py  test_health.py  test_release.py
workers/research/: pyproject.toml
workers/research/src/black_book_research/: __init__.py  scheduled_jobs.py  test_health.py  test_scheduled_jobs.py
workers/research/src/black_book_research/adapters/: __init__.py  candidates.py  drift.py  gates.py  registry.py  run_health.py  test_adapters.py  types.py
workers/research/src/black_book_research/adapters/federal/: __init__.py  conftest.py  test_federal.py
workers/research/src/black_book_research/adapters/federal/dpla/: definition.py
workers/research/src/black_book_research/adapters/wikimedia/: __init__.py  bulk.py  category_gate.py  category_graph.py  extractors.py  normalizer.py  search.py  test_wikimedia.py  types.py
workers/research/src/black_book_research/confidence_engine/: __init__.py  calibration.py  engine.py  models.py  test_confidence_engine.py
workers/research/src/black_book_research/crawl/: __init__.py  test_trafilatura_extract.py  trafilatura_extract.py
workers/research/src/black_book_research/discovery/: __init__.py  campaign.py  deduplication.py  geography.py  guard.py  hashing.py  identity.py  ingestion.py  pipeline.py  quarantine.py  signals.py  test_discovery.py  types.py
workers/research/src/black_book_research/extraction/: __init__.py  evidence.py  models.py  parser.py  test_extraction.py  validation.py
workers/research/src/black_book_research/query_packs/: __init__.py  classification.py  discovery.py  metrics.py  pack.py  registry.py  terms.py  test_query_packs.py  types.py
workers/research/src/black_book_research/relevance/: __init__.py  decisions.py  dimensions.py  distinctiveness.py  engine.py  gates.py  override.py  public.py  test_relevance.py  types.py  why.py
workers/research/src/black_book_research/resolution/: __init__.py  models.py  normalization.py  resolver.py  test_resolution.py
workers/security/: pyproject.toml
workers/security/src/black_book_security/: __init__.py  test_health.py
workers/security/src/black_book_security/url_fetch/: __init__.py  policy.py  test_worker.py  worker.py
(+2115 files in other folders)
