[project]
name = "black-book-publication"
version = "0.0.0"
description = "Projection, snapshot, indexing, and release workers"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/black_book_publication"]
