[project]
name = "black-book-research"
version = "0.0.0"
description = "Source discovery and ingestion workers"
requires-python = ">=3.12"
dependencies = [
  "black-book-constitution",
  "trafilatura>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/black_book_research"]

[tool.uv.sources]
black-book-constitution = { workspace = true }
