[project]
name = "black-book-security-worker"
version = "0.0.0"
description = "Quarantine, content validation, and integrity workers"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/black_book_security"]
